--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>com.github.rinde</groupId>
             <artifactId>rinsim-example</artifactId>
-            <version>4.4.0</version>
+            <version>4.4.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
