--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,14 @@
             <version>3.3.0-SNAPSHOT</version>
         </dependency>
 
+        <!--<dependency>-->
+        <!--<groupId>student.kuleuven.be</groupId>-->
+        <!--<artifactId>NewYorkCityTaxiChallenge</artifactId>-->
+        <!--<version>1.0</version>-->
+        <!--<scope>system</scope>-->
+        <!--<systemPath>${project.basedir}/src/main/resources/nyctaxidata-to-rinsimscenario.jar</systemPath>-->
+        <!--</dependency>-->
+
 
         <dependency>
             <groupId>com.google.auto.value</groupId>
@@ -68,63 +76,7 @@
         </dependency>
     </dependencies>
 
-    <!--<groupId>student.kuleuven.be</groupId>-->
-    <!--<artifactId>NewYorkCityTaxiChallenge</artifactId>-->
-    <!--<version>0.0.1-SNAPSHOT</version>-->
-    <!--<packaging>jar</packaging>-->
 
-    <!--<name>RinSim Dynamism Extension</name>-->
-    <!--<url>http://maven.apache.org</url>-->
-
-    <!--<properties>-->
-        <!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
-        <!--<swt.version>4.5.2</swt.version>-->
-        <!--<rinsim.version>4.4.0-SNAPSHOT</rinsim.version>-->
-        <!--<rinlog.version>3.3.0-SNAPSHOT</rinlog.version>-->
-        <!--<datgen.version>1.1.1</datgen.version>-->
-        <!--<maven.compiler.source>1.8</maven.compiler.source>-->
-        <!--<maven.compiler.target>1.8</maven.compiler.target>-->
-    <!--</properties>-->
-
-    <!--<dependencies>-->
-        <!--<dependency>-->
-            <!--<groupId>com.google.guava</groupId>-->
-            <!--<artifactId>guava</artifactId>-->
-            <!--<version>19.0</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>junit</groupId>-->
-            <!--<artifactId>junit</artifactId>-->
-            <!--<version>4.8.2</version>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.google.auto.value</groupId>-->
-            <!--<artifactId>auto-value</artifactId>-->
-            <!--<version>1.2</version>-->
-            <!--<scope>provided</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.github.rinde</groupId>-->
-            <!--<artifactId>rinsim-core</artifactId>-->
-            <!--<version>${rinsim.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.github.rinde</groupId>-->
-            <!--<artifactId>rinsim-example</artifactId>-->
-            <!--<version>${rinsim.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.github.rinde</groupId>-->
-            <!--<artifactId>rinsim-scenario</artifactId>-->
-            <!--<version>${rinsim.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.github.rinde</groupId>-->
-            <!--<artifactId>rinlog</artifactId>-->
-            <!--<version>${rinlog.version}</version>-->
-        <!--</dependency>-->
-    <!--</dependencies>-->
 
 
 </project>
